added the vaccine service, added styling to table ranking css

--- a/jrs2Covid/src/app/components/home-page/home-page.component.html
+++ b/jrs2Covid/src/app/components/home-page/home-page.component.html
@@ -1,3 +1,5 @@
 <choropleth></choropleth>
 
 <app-line-graph [regions]="states"></app-line-graph>
+
+<app-table-rank [data]="states"></app-table-rank>
