--- a/jrs2Covid/src/app/components/county-page/county-page.component.css
+++ b/jrs2Covid/src/app/components/county-page/county-page.component.css
@@ -1,3 +1,22 @@
 h2 {
     text-align: center;
 }
+
+.table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th {
+    text-align: center;
+    padding: 10px;
+}
+
+td,
+a {
+    text-align: center;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
