--- a/jrs2Covid/src/app/components/state-page/state-page.component.html
+++ b/jrs2Covid/src/app/components/state-page/state-page.component.html
@@ -5,33 +5,28 @@
 <div>Total Deaths: {{ stateData?.totalDeaths }}</div>
 
 <div *ngIf="stateData?.timeline?.vaccinations">
-  Total Vaccination:
-
-  {{stateData.totalVaccinations}}
-  <br>
-  Vaccinations In The Last {{stateData.timeline.vaccinations.length}} Days:
-  {{stateData.totalVaccinations - stateData.timeline.vaccinations[0].value}}
+    Total Vaccination: {{stateData.totalVaccinations}}
+    <br> Vaccinations In The Last {{stateData.timeline.vaccinations.length}} Days: {{stateData.totalVaccinations - stateData.timeline.vaccinations[0].value}}
 
 </div>
 
 <div>
-  Vaccinations Administered Today:
-
-  {{ stateData?.todayVaccinations }}
+    Vaccinations Administered Today: {{ stateData?.todayVaccinations }}
 </div>
 
 
 <div>
-  Counties:
-  <br>
-  <select [(ngModel)]="selectedCounty">
+    Counties:
+    <br>
+    <select [(ngModel)]="selectedCounty">
     <option *ngFor="let subregion of countiesNames" value="{{subregion}}">
       {{subregion}}
     </option>
   </select>
-  <br>
-  <button type="button" (click)="onCountyClicked()">Go To County Page</button>
+    <br>
+    <button type="button" (click)="onCountyClicked()">Go To County Page</button>
 
 </div>
 
+<!-- <app-line-graph [regions]="counties"></app-line-graph> -->
 <app-table-rank [data]="counties"></app-table-rank>
