Implemented pie/donut chart

--- a/jrs2Covid/src/app/components/county-page/county-page.component.html
+++ b/jrs2Covid/src/app/components/county-page/county-page.component.html
@@ -12,4 +12,5 @@
         <br>
     </div>
     <app-line-graph [regions]="[county]"></app-line-graph>
+    <pie-chart-parent [region]="county"></pie-chart-parent>
 </div>
