--- a/jrs2Covid/src/app/components/county-page/county-page.component.html
+++ b/jrs2Covid/src/app/components/county-page/county-page.component.html
@@ -1,5 +1,5 @@
 <div class="root">
-    <h2>{{county.region | uppercase}} COVID NUMBERS</h2>
+    <h2>{{county?.region | uppercase}} COVID NUMBERS</h2>
     <div *ngIf="county">
         <table>
             <tr>
