--- a/jrs2Covid/src/app/components/table-rank/table-rank.component.html
+++ b/jrs2Covid/src/app/components/table-rank/table-rank.component.html
@@ -1,20 +1,27 @@
 <p>table-rank works!</p>
+<div style="overflow-x: auto;">
 
-<table class="table">
-    <tr class="table-row">
-        <th *ngFor="let header of tableHeaders" class="header-columns" (click)="changeSortingMethod(header.value)">
-            {{header.label}}
-            <fa-icon class="icon"
-                [icon]="sortingColumn != header.value ? faSort : (sortingOrder == 1 ? faSortUp : faSortDown)">
-            </fa-icon>
-        </th>
-    </tr>
-    <tr class="table-row" *ngFor="let region of data">
-        <td *ngFor="let col of tableHeaders" class="{{col.value}}-column">
-            {{region[col.value]}}
-        </td>
-        <!-- <td class="state-column"><a [routerLink]="region.region">{{region.region}}</a></td>
-        <td class="cases-column">{{region.totalCases}}</td>
-        <td class="deaths-column">{{region.totalDeaths}}</td> -->
-    </tr>
-</table>
+    <table class="table">
+
+        <tr class="table-row">
+            <th *ngFor="let header of tableHeaders" (click)="changeSortingMethod(header.value)">
+                {{header.label}}
+                <fa-icon class="icon"
+                    [icon]="sortingColumn != header.value ? faSort : (sortingOrder == 1 ? faSortUp : faSortDown)">
+                </fa-icon>
+            </th>
+        </tr>
+        <tr class="table-row" *ngFor="let region of data">
+            <ng-template #regionSpan>
+                <!-- ng template is just a definition. does not render unless told to -->
+                <span><a [routerLink]="region.region">{{region.region}}</a></span>
+            </ng-template>
+
+            <td *ngFor="let col of tableHeaders" class="{{col.value}}">
+                <span *ngIf="col.value != 'region'; else regionSpan">{{region[col.value]}}</span>
+            </td>
+        </tr>
+
+    </table>
+
+</div>
