--- a/jrs2Covid/src/app/components/county-page/county-page.component.css
+++ b/jrs2Covid/src/app/components/county-page/county-page.component.css
@@ -8,6 +8,8 @@ h2 {
 }
 
 th {
+    background-color: #8aaaa7;
+    color: #131386;
     text-align: center;
     padding: 10px;
 }
@@ -18,5 +20,6 @@ a {
 }
 
 tr:nth-child(even) {
-    background-color: #f2f2f2;
+    background-color: #dbe9e7;
+    color: #131386;
 }
