--- a/jrs2Covid/src/app/components/line-graph/line-graph.component.html
+++ b/jrs2Covid/src/app/components/line-graph/line-graph.component.html
@@ -1,7 +1,17 @@
-<p>line-graph works!</p>
-<input type="radio" [(ngModel)]="yAxisValue" (ngModelChange)="changeYAxis()" name="yAxisValue" value="totalCases" id="casesRadio">
+<input type="radio"
+       [(ngModel)]="yAxisValue"
+       (ngModelChange)="changeYAxis()"
+       name="yAxisValue"
+       value="totalCases"
+       id="casesRadio">
 <label for="casesRadio">Cases</label>
 <br>
-<input type="radio" [(ngModel)]="yAxisValue" (ngModelChange)="changeYAxis()" name="yAxisValue" value="totalDeaths" id="casesDeaths">
+<input type="radio"
+       [(ngModel)]="yAxisValue"
+       (ngModelChange)="changeYAxis()"
+       name="yAxisValue"
+       value="totalDeaths"
+       id="casesDeaths">
 <label for="casesDeaths">Deaths</label>
+
 <div class="line-canvas"></div>
