--- a/jrs2Covid/src/app/components/spinner/spinner.component.html
+++ b/jrs2Covid/src/app/components/spinner/spinner.component.html
@@ -1,1 +1,3 @@
-<fa-icon [icon]="faSpinner" [pulse]="true" size="6x"></fa-icon>
+<fa-icon [icon]="faSpinner"
+         [pulse]="true"
+         size="6x"></fa-icon>
