--- a/jrs2Covid/src/app/components/pie-chart-parent/pie-chart-parent.component.html
+++ b/jrs2Covid/src/app/components/pie-chart-parent/pie-chart-parent.component.html
@@ -1,19 +1,13 @@
-<div class="root">
+<div class="root" *ngIf="region; else spinner">
 
     <div class="col">
-        <pie-chart [region]="region"
-                   [partial]="region?.totalCases"
-                   [total]="region?.population"
-                   [color]="'#70a9ff'">
+        <pie-chart [region]="region" [partial]="region?.totalCases" [total]="region?.population" [color]="'#70a9ff'">
         </pie-chart>
         <p>Total Cases per Population</p>
     </div>
 
     <div class="col">
-        <pie-chart [region]="region"
-                   [partial]="region?.totalDeaths"
-                   [total]="region?.population"
-                   [color]="'#ff3333'">
+        <pie-chart [region]="region" [partial]="region?.totalDeaths" [total]="region?.population" [color]="'#ff3333'">
         </pie-chart>
         <p>Total Deaths per Population</p>
     </div>
@@ -26,11 +20,12 @@
     </div> -->
 
     <div class="col">
-        <pie-chart [region]="region"
-                   [partial]="region?.totalDeaths"
-                   [total]="region?.totalCases"
-                   [color]="'#ffff33'">
+        <pie-chart [region]="region" [partial]="region?.totalDeaths" [total]="region?.totalCases" [color]="'#ffff33'">
         </pie-chart>
         <p>Total Deaths per Total Cases</p>
     </div>
 </div>
+
+<ng-template #spinner>
+    <spinner></spinner>
+</ng-template>
