--- a/jrs2Covid/src/app/components/pie-chart-parent/pie-chart-parent.component.css
+++ b/jrs2Covid/src/app/components/pie-chart-parent/pie-chart-parent.component.css
@@ -1,13 +1,18 @@
 div {
   display: flex;
-  color: black;
+  color: black; /*this is text under donut charts*/
 }
 
 .root {
+  position: relative;
   flex-direction: row;
-  gap: 1em;
-  padding: 1em;
+  justify-content: center;
+  /* gap: 1em; */
+  /* padding: 1em; */
   text-align: center;
+  width: 100%;
+  height: 300px;
+  /* border: solid black 1px; */
 }
 
 .col {
@@ -15,10 +20,30 @@ div {
   justify-content: center;
   align-items: center;
   width: 150px;
-  padding: 0;
+  padding: 5px;
 }
 
 .col > * {
   margin: 0;
   width: 100%;
 }
+
+.spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5em;
+}
+
+p {
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+/* .overlay {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+} */
