--- a/jrs2Covid/src/app/components/spinner/spinner.component.html
+++ b/jrs2Covid/src/app/components/spinner/spinner.component.html
@@ -1,3 +1,1 @@
-<fa-icon [icon]="faSpinner"
-         [pulse]="true"
-         size="6x"></fa-icon>
+<fa-icon [icon]="faSpinner" [pulse]="true" size="6x" style="color:rgb(19, 19, 134)"></fa-icon>
