add loading spinner on changing time period of graph

--- a/jrs2Covid/src/app/components/line-graph/line-graph.component.html
+++ b/jrs2Covid/src/app/components/line-graph/line-graph.component.html
@@ -1,19 +1,30 @@
-<br>
-<div class="line-canvas" #canvas>
-    <select [(ngModel)]="selectedDay" (ngModelChange)="getDay()">
-        <option *ngFor="let timePeriod of days" [value]="timePeriod.value">{{timePeriod.label}}</option>
+<div class="line-canvas"
+     #canvas>
+    <select [(ngModel)]="selectedDay"
+            (ngModelChange)="getDay()">
+        <option *ngFor="let timePeriod of days"
+                [value]="timePeriod.value">{{timePeriod.label}}</option>
     </select>
-    <div *ngIf="regions; else spinner">
-        <input type="radio" [(ngModel)]="yAxisValue" (ngModelChange)="resetGraph()" name="yAxisValue" value="totalCases" id="casesRadio">
-        <label for="casesRadio">Cases</label>
-        <br>
-        <input type="radio" [(ngModel)]="yAxisValue" (ngModelChange)="resetGraph()" name="yAxisValue" value="totalDeaths" id="casesDeaths">
-        <label for="casesDeaths">Deaths</label>
-    </div>
-</div>
+    <br>
 
-<ng-template #spinner>
-    <div class="spinner">
+    <input type="radio"
+           [(ngModel)]="yAxisValue"
+           (ngModelChange)="resetGraph()"
+           name="yAxisValue"
+           value="totalCases"
+           id="casesRadio">
+    <label for="casesRadio">Cases</label>
+    <br>
+    <input type="radio"
+           [(ngModel)]="yAxisValue"
+           (ngModelChange)="resetGraph()"
+           name="yAxisValue"
+           value="totalDeaths"
+           id="casesDeaths">
+    <label for="casesDeaths">Deaths</label>
+
+    <div class="spinner"
+         *ngIf="!regions">
         <spinner></spinner>
     </div>
-</ng-template>
+</div>
