--- a/jrs2Covid/src/app/components/pie-chart-parent/pie-chart-parent.component.html
+++ b/jrs2Covid/src/app/components/pie-chart-parent/pie-chart-parent.component.html
@@ -1,13 +1,20 @@
-<div class="root" *ngIf="region; else spinner">
+<div class="root"
+     *ngIf="false; else spinner">
 
     <div class="col">
-        <pie-chart [region]="region" [partial]="region?.totalCases" [total]="region?.population" [color]="'#70a9ff'">
+        <pie-chart [region]="region"
+                   [partial]="region?.totalCases"
+                   [total]="region?.population"
+                   [color]="'#70a9ff'">
         </pie-chart>
         <p>Total Cases per Population</p>
     </div>
 
     <div class="col">
-        <pie-chart [region]="region" [partial]="region?.totalDeaths" [total]="region?.population" [color]="'#ff3333'">
+        <pie-chart [region]="region"
+                   [partial]="region?.totalDeaths"
+                   [total]="region?.population"
+                   [color]="'#ff3333'">
         </pie-chart>
         <p>Total Deaths per Population</p>
     </div>
@@ -20,18 +27,17 @@
         </div> -->
 
     <div class="col">
-        <pie-chart [region]="region" [partial]="region?.totalDeaths" [total]="region?.totalCases" [color]="'#ffff33'">
+        <pie-chart [region]="region"
+                   [partial]="region?.totalDeaths"
+                   [total]="region?.totalCases"
+                   [color]="'#ffff33'">
         </pie-chart>
         <p>Deaths per Total Cases</p>
     </div>
 </div>
-<div class="spinner">
-    <ng-template #spinner>
-        <spinner class="spinner"></spinner>
-    </ng-template>
-</div>
 
-
-
-<!-- <div class="overlay">
-</div> -->
+<ng-template #spinner>
+    <div class="spinner">
+        <spinner></spinner>
+    </div>
+</ng-template>
