fixed pie chart: removed literal false value

--- a/jrs2Covid/src/app/components/pie-chart-parent/pie-chart-parent.component.html
+++ b/jrs2Covid/src/app/components/pie-chart-parent/pie-chart-parent.component.html
@@ -1,5 +1,5 @@
 <div class="root"
-     *ngIf="false; else spinner">
+     *ngIf="region; else spinner">
 
     <div class="col">
         <pie-chart [region]="region"
