--- a/jrs2Covid/src/app/components/covid-app/covid-app.component.html
+++ b/jrs2Covid/src/app/components/covid-app/covid-app.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<div class="root">
+    <div class="container">
+        <router-outlet></router-outlet>
+    </div>
+</div>
