--- a/jrs2Covid/src/app/components/county-page/county-page.component.html
+++ b/jrs2Covid/src/app/components/county-page/county-page.component.html
@@ -18,7 +18,8 @@
         </tr>
     </table>
 
-    <app-line-graph [regions]="countyAsArray" (timePeriodChange)="dayChange($event)"></app-line-graph>
+    <app-line-graph [regions]="countyAsArray"
+                    (timePeriodChange)="dayChange($event)"></app-line-graph>
     <pie-chart-parent [region]="county"></pie-chart-parent>
 
 </div>
