--- a/jrs2Covid/src/app/components/state-page/state-page.component.html
+++ b/jrs2Covid/src/app/components/state-page/state-page.component.html
@@ -20,12 +20,14 @@
   Counties:
   <br>
   <select [(ngModel)]="selectedCounty">
-    <option *ngFor="let subregion of countiesNames" value="{{subregion}}">
+    <option *ngFor="let subregion of countiesNames"
+            value="{{subregion}}">
       {{subregion}}
     </option>
   </select>
   <br>
-  <button type="button" (click)="onCountyClicked()">Go To County Page</button>
+  <button type="button"
+          (click)="onCountyClicked()">Go To County Page</button>
 
 </div>
 <pie-chart-parent [region]="stateData"></pie-chart-parent>
