--- a/jrs2Covid/src/app/components/table-rank/table-rank.component.html
+++ b/jrs2Covid/src/app/components/table-rank/table-rank.component.html
@@ -1,4 +1,3 @@
-<p>table-rank works!</p>
 <div style="overflow-x: auto;">
 
     <table class="table">
@@ -13,8 +12,8 @@
             </th>
         </tr>
     </table>
-    <div class="table-scroll">
 
+    <div class="table-scroll">
         <table *ngIf="data; else spinner">
             <tr class="table-row"
                 *ngFor="let region of data">
@@ -30,12 +29,16 @@
             </tr>
 
         </table>
-
     </div>
 
 </div>
 
 <ng-template #spinner>
+    <!-- 
+        table will match styling of actual table element
+        table is used here because ngIf and ngFor directives 
+        cannot be placed on same element 
+    -->
     <table>
         <tr>
             <td class="spinner"
