--- a/jrs2Covid/src/app/components/home-page/home-page.component.html
+++ b/jrs2Covid/src/app/components/home-page/home-page.component.html
@@ -3,3 +3,8 @@
 <app-line-graph [regions]="states"></app-line-graph>
 
 <app-table-rank [data]="states"></app-table-rank>
+
+<p>
+    For More Information On COVID-19 Please Visit:
+    <a href="https://www.cdc.gov/"> The Centers For Disease Control</a>
+</p>
