--- a/jrs2Covid/src/app/components/county-page/county-page.component.css
+++ b/jrs2Covid/src/app/components/county-page/county-page.component.css
@@ -1,25 +1,32 @@
 h2 {
-    text-align: center;
+  text-align: center;
 }
 
 .table {
-    border-collapse: collapse;
-    width: 100%;
+  border-collapse: collapse;
+  width: 100%;
+}
+tr {
 }
 
 th {
-    background-color: #8aaaa7;
-    color: #131386;
-    text-align: center;
-    padding: 10px;
+  background-color: #8aaaa7;
+  color: #131386;
+  text-align: center;
+  padding: 10px;
+}
+
+a {
+  text-align: center;
 }
 
 td,
 a {
-    text-align: center;
+  text-align: center;
+  padding: 10px;
 }
 
 tr:nth-child(even) {
-    background-color: #dbe9e7;
-    color: #131386;
+  background-color: #dbe9e7;
+  color: #131386;
 }
