--- a/jrs2Covid/src/styles.css
+++ b/jrs2Covid/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
 html {
-    font-family: 'Roboto', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
