reload line graph appropriately on home page

--- a/jrs2Covid/src/app/components/home-page/home-page.component.html
+++ b/jrs2Covid/src/app/components/home-page/home-page.component.html
@@ -1,6 +1,7 @@
 <choropleth></choropleth>
 
-<app-line-graph [regions]="states"></app-line-graph>
+<app-line-graph [regions]="states"
+                (timePeriodChange)="reloadData($event)"></app-line-graph>
 
 <app-table-rank [data]="states"></app-table-rank>
 
