--- a/jrs2Covid/src/app/components/line-graph/line-graph.component.html
+++ b/jrs2Covid/src/app/components/line-graph/line-graph.component.html
@@ -1,6 +1,6 @@
 <div class="line-canvas"
      #canvas>
-       <select [(ngModel)]="selectedDay"
+       <select [(ngModel)]="activeTimePeriod"
                (ngModelChange)="getDay()">
               <option *ngFor="let timePeriod of days"
                       [value]="timePeriod.value">{{timePeriod.label}}</option>
