--- a/jrs2Covid/src/app/components/state-page/state-page.component.html
+++ b/jrs2Covid/src/app/components/state-page/state-page.component.html
@@ -39,7 +39,7 @@
 
 <!-- <app-line-graph [regions]="counties"></app-line-graph> -->
 <div>
-  <p *ngIf="stateData.region == 'South Carolina'">
+  <p *ngIf="stateData?.region == 'South Carolina'">
 
     For More Information In South Carolina, Including COVID-19 Testing And Vaccination Locations, Please Visit:
     <a href="https://scdhec.gov/"> DHEC</a>
