--- a/jrs2Covid/src/app/components/county-page/county-page.component.html
+++ b/jrs2Covid/src/app/components/county-page/county-page.component.html
@@ -19,7 +19,7 @@
     </table>
 
     <app-line-graph [regions]="countyAsArray"
-                    (timePeriodChange)="dayChange($event)"></app-line-graph>
+                    (timePeriodChange)="reloadData($event)"></app-line-graph>
     <pie-chart-parent [region]="county"></pie-chart-parent>
 
 </div>
