added css styles

--- a/jrs2Covid/src/app/components/home-page/home-page.component.html
+++ b/jrs2Covid/src/app/components/home-page/home-page.component.html
@@ -1,7 +1,6 @@
 <choropleth></choropleth>
 
-<app-line-graph [regions]="states"
-                (timePeriodChange)="reloadData($event)"></app-line-graph>
+<app-line-graph [regions]="states" (timePeriodChange)="reloadData($event)"></app-line-graph>
 
 <app-table-rank [data]="states"></app-table-rank>
 
@@ -9,3 +8,7 @@
     For More Information On COVID-19 Please Visit:
     <a href="https://www.cdc.gov/"> The Centers For Disease Control</a>
 </p>
+
+<footer>
+
+</footer>
