--- a/jrs2Covid/src/app/components/line-graph/line-graph.component.css
+++ b/jrs2Covid/src/app/components/line-graph/line-graph.component.css
@@ -1,4 +1,13 @@
 .spinner {
-    padding: 5em 0;
-    text-align: center;
+  padding: 5em 0;
+  text-align: center;
+}
+
+.select {
+  padding-bottom: 8px;
+}
+
+.line-canvas {
+  padding: 1em;
+  margin-bottom: 2em;
 }
