--- a/jrs2Covid/src/app/components/county-page/county-page.component.css
+++ b/jrs2Covid/src/app/components/county-page/county-page.component.css
@@ -1,12 +1,18 @@
+.root {
+}
+
 h2 {
   text-align: center;
 }
 
-.table {
+table {
   border-collapse: collapse;
   width: 100%;
 }
+
 tr {
+  width: 100%;
+  align-items: center;
 }
 
 th {
@@ -22,8 +28,7 @@ a {
   text-decoration: none;
 }
 
-td,
-a {
+td {
   text-align: center;
   padding: 10px;
 }
@@ -31,4 +36,9 @@ a {
 tr:nth-child(even) {
   background-color: #dbe9e7;
   color: #131386;
+}
+
+td:not(td:last-of-type),
+th:not(th:last-of-type) {
+  border-right: solid rgb(111, 145, 141) 1px;
 }
