--- a/jrs2Covid/src/app/components/county-page/county-page.component.html
+++ b/jrs2Covid/src/app/components/county-page/county-page.component.html
@@ -1,25 +1,39 @@
 <div class="root">
-    <h2>{{county?.region | uppercase}} COVID NUMBERS</h2>
+    <div class="bs">
 
-    <table *ngIf="county">
-        <tr>
-            <th class="county">County</th>
-            <th class="state">State</th>
-            <th>Population</th>
-            <th>Total Cases</th>
-            <th>Total Deaths</th>
-        </tr>
-        <tr>
-            <td>{{county.region | uppercase}}</td>
-            <a routerLink="..">{{county.parentRegion | uppercase}}</a>
-            <td>{{county.population}}</td>
-            <td>{{county.totalCases}}</td>
-            <td>{{county.totalDeaths}}</td>
-        </tr>
-    </table>
+        <h2>{{county?.region | uppercase}} COVID NUMBERS</h2>
 
-    <app-line-graph [regions]="countyAsArray"
-                    (timePeriodChange)="reloadData($event)"></app-line-graph>
+    </div>
+
+
+    <div class="bs">
+        <table *ngIf="county">
+            <tr>
+                <th class="county">County</th>
+                <th class="state">State</th>
+                <th>Population</th>
+                <th>Total Cases</th>
+                <th>Total Deaths</th>
+            </tr>
+            <tr>
+                <td>{{county.region | uppercase}}</td>
+                <td>
+                    <a routerLink="..">{{county.parentRegion | uppercase}}</a>
+                </td>
+                <td>{{county.population}}</td>
+                <td>{{county.totalCases}}</td>
+                <td>{{county.totalDeaths}}</td>
+            </tr>
+        </table>
+    </div>
+
+
+
+
+
+
+    <app-line-graph [regions]="countyAsArray" (timePeriodChange)="reloadData($event)"></app-line-graph>
+
     <pie-chart-parent [region]="county"></pie-chart-parent>
 
 </div>
