--- a/jrs2Covid/src/app/components/covid-app/covid-app.component.html
+++ b/jrs2Covid/src/app/components/covid-app/covid-app.component.html
@@ -1,7 +1,7 @@
 <div class="root">
     <div class="container">
 
-        <ul class="breadcrumb">
+        <ul class="bs">
             <li *ngFor="let region of breadcrumb; index as i">
 
                 <ng-container *ngIf="i != breadcrumb.length-1; then link else notLink"></ng-container>
