--- a/jrs2Covid/src/app/components/line-graph/line-graph.component.html
+++ b/jrs2Covid/src/app/components/line-graph/line-graph.component.html
@@ -1,30 +1,28 @@
-<div class="line-canvas"
-     #canvas>
-       <select [(ngModel)]="activeTimePeriod"
-               (ngModelChange)="getDay()">
-              <option *ngFor="let timePeriod of days"
-                      [value]="timePeriod.value">{{timePeriod.label}}</option>
-       </select>
-       <br>
+<div class="bs">
 
-       <input type="radio"
-              [(ngModel)]="yAxisValue"
-              (ngModelChange)="resetGraph()"
-              name="yAxisValue"
-              value="totalCases"
-              id="casesRadio">
-       <label for="casesRadio">Cases</label>
-       <br>
-       <input type="radio"
-              [(ngModel)]="yAxisValue"
-              (ngModelChange)="resetGraph()"
-              name="yAxisValue"
-              value="totalDeaths"
-              id="casesDeaths">
-       <label for="casesDeaths">Deaths</label>
+       <div class="line-canvas" #canvas>
 
-       <div class="spinner"
-            *ngIf="!regions">
-              <spinner></spinner>
+              <div class="select">
+
+                     <select [(ngModel)]="activeTimePeriod" (ngModelChange)="getDay()">
+                            <option *ngFor="let timePeriod of days" [value]="timePeriod.value">{{timePeriod.label}}
+                            </option>
+                     </select>
+
+              </div>
+
+
+              <input type="radio" [(ngModel)]="yAxisValue" (ngModelChange)="resetGraph()" name="yAxisValue"
+                     value="totalCases" id="casesRadio">
+              <label for="casesRadio">Cases</label>
+              <br>
+              <input type="radio" [(ngModel)]="yAxisValue" (ngModelChange)="resetGraph()" name="yAxisValue"
+                     value="totalDeaths" id="casesDeaths">
+              <label for="casesDeaths">Deaths</label>
+
+              <div class="spinner" *ngIf="!regions">
+                     <spinner></spinner>
+              </div>
        </div>
+
 </div>
