--- a/jrs2Covid/src/app/components/pie-chart-parent/pie-chart-parent.component.css
+++ b/jrs2Covid/src/app/components/pie-chart-parent/pie-chart-parent.component.css
@@ -7,12 +7,11 @@ div {
   position: relative;
   flex-direction: row;
   justify-content: center;
-  /* gap: 1em; */
-  /* padding: 1em; */
   text-align: center;
   width: 100%;
   height: 300px;
-  /* border: solid black 1px; */
+  margin-bottom: 2em;
+  /* border: solid lightgrey 0.5px; */
 }
 
 .col {
@@ -21,6 +20,8 @@ div {
   align-items: center;
   width: 150px;
   padding: 5px;
+  color: rgb(19, 19, 134);
+
   /* border: solid black 1px; */
 }
 
