--- a/jrs2Covid/src/app/components/state-page/state-page.component.css
+++ b/jrs2Covid/src/app/components/state-page/state-page.component.css
@@ -1,3 +1,18 @@
 a {
   text-decoration: none;
 }
+
+.stateNums {
+  width: 50%;
+  padding: 1.5em;
+  margin-bottom: 2em;
+  font-size: 1em;
+}
+
+/* .donut {
+  color: rgb(19, 19, 134);
+} */
+
+p {
+  text-align: center;
+}
