--- a/jrs2Covid/src/app/components/table-rank/table-rank.component.html
+++ b/jrs2Covid/src/app/components/table-rank/table-rank.component.html
@@ -1,46 +1,52 @@
-<div style="overflow-x: auto;">
+<div class="bs">
 
-    <table class="table">
 
-        <tr class="table-row">
-            <th *ngFor="let header of tableHeaders" (click)="changeSortingMethod(header.value)">
-                {{header.label}}
-                <fa-icon class="icon"
-                    [icon]="sortingColumn != header.value ? faSort : (sortingOrder == 1 ? faSortUp : faSortDown)">
-                </fa-icon>
-            </th>
-        </tr>
-    </table>
+    <div style="overflow-x: auto;">
 
-    <div class="table-scroll">
-        <table *ngIf="data; else spinner">
-            <tr class="table-row" *ngFor="let region of data">
-                <ng-template #regionSpan>
-                    <!-- ng template is just a definition. does not render unless told to -->
-                    <span><a [routerLink]="region.region">{{region.region}}</a></span>
-                </ng-template>
+        <table class="table">
 
-                <td *ngFor="let col of tableHeaders" class="{{col.value}}">
-                    <span *ngIf="col.value != 'region'; else regionSpan">{{region[col.value]}}</span>
-                </td>
+            <tr class="table-row">
+                <th *ngFor="let header of tableHeaders" (click)="changeSortingMethod(header.value)">
+                    {{header.label}}
+                    <fa-icon class="icon"
+                        [icon]="sortingColumn != header.value ? faSort : (sortingOrder == 1 ? faSortUp : faSortDown)">
+                    </fa-icon>
+                </th>
             </tr>
-
         </table>
+
+        <div class="table-scroll">
+            <table *ngIf="data; else spinner">
+                <tr class="table-row" *ngFor="let region of data">
+                    <ng-template #regionSpan>
+                        <!-- ng template is just a definition. does not render unless told to -->
+                        <span><a [routerLink]="region.region">{{region.region}}</a></span>
+                    </ng-template>
+
+                    <td *ngFor="let col of tableHeaders" class="{{col.value}}">
+                        <span *ngIf="col.value != 'region'; else regionSpan">{{region[col.value]}}</span>
+                    </td>
+                </tr>
+
+            </table>
+        </div>
+
     </div>
 
-</div>
 
-<ng-template #spinner>
-    <!-- 
-        table will match styling of actual table element
-        table is used here because ngIf and ngFor directives 
-        cannot be placed on same element 
-    -->
-    <table>
-        <tr>
-            <td class="spinner" colspan="100%">
-                <spinner></spinner>
-            </td>
-        </tr>
-    </table>
-</ng-template>
+
+    <ng-template #spinner>
+        <!-- 
+            table will match styling of actual table element
+            table is used here because ngIf and ngFor directives 
+            cannot be placed on same element 
+        -->
+        <table>
+            <tr>
+                <td class="spinner" colspan="100%">
+                    <spinner></spinner>
+                </td>
+            </tr>
+        </table>
+    </ng-template>
+</div>
