--- a/jrs2Covid/src/styles.css
+++ b/jrs2Covid/src/styles.css
@@ -7,4 +7,11 @@ html {
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
+  color: rgb(19, 19, 134);
+}
+
+.bs {
+  padding: 1em;
+  margin-bottom: 2em;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
