added spinner to county data

--- a/jrs2Covid/src/app/components/county-page/county-page.component.html
+++ b/jrs2Covid/src/app/components/county-page/county-page.component.html
@@ -25,6 +25,9 @@
                 <td>{{county.totalDeaths}}</td>
             </tr>
         </table>
+        <div class="spinner" *ngIf="!countyAsArray">
+            <spinner></spinner>
+        </div>
     </div>
 
 
