--- a/jrs2Covid/src/app/components/covid-app/covid-app.component.css
+++ b/jrs2Covid/src/app/components/covid-app/covid-app.component.css
@@ -30,3 +30,23 @@ ul li a {
 ul li a:hover {
   text-decoration: underline;
 }
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 0.7em;
+}
+.jrs-logo {
+  height: 70px;
+}
+.jrs {
+  top: 15px;
+}
+p {
+  text-align: center;
+  margin-bottom: 0.2em;
+  margin-top: 0;
+}
